<resources>
    <string name="app_name" translatable="false">Somnificus</string>
    <string name="build_type" translatable="false">RELEASE</string>
    <string name="ads_id_ll_banner" translatable="false">ca-app-pub-6133161179615824/4921675029</string>
    <string name="ads_id_native_alarmF_1" translatable="false">ca-app-pub-6133161179615824/6780291106</string>
    <string name="ads_id_native_wakeup_1" translatable="false">ca-app-pub-6133161179615824/9422697167</string>
    <string name="ads_id_native_sds_1" translatable="false">ca-app-pub-6133161179615824/5127200609</string>
    <string name="debug_msg" translatable="false"></string>
    <string name="common__text_yes">Yes</string>
    <string name="common__text_no">No</string>
    <string name="common__text_ok">OK</string>
    <string name="common__text_cancel">Cancel</string>
    <string name="common__text_save">Save</string>
    <string name="common__text_saving">Saving...</string>
    <string name="common__text_back">Back</string>
    <string name="common__text_close">Close</string>
    <string name="common__text_tip">Tip</string>
    <string name="common__text_dow_sun_short">Sun</string>
    <string name="common__text_dow_mon_short">Mon</string>
    <string name="common__text_dow_tue_short">Tue</string>
    <string name="common__text_dow_wed_short">Wed</string>
    <string name="common__text_dow_thu_short">Thu</string>
    <string name="common__text_dow_fri_short">Fri</string>
    <string name="common__text_dow_sat_short">Sat</string>
    <string name="common__text_dow_sun">Sunday</string>
    <string name="common__text_dow_mon">Monday</string>
    <string name="common__text_dow_tue">Tuesday</string>
    <string name="common__text_dow_wed">Wednesday</string>
    <string name="common__text_dow_thu">Thursday</string>
    <string name="common__text_dow_fri">Friday</string>
    <string name="common__text_dow_sat">Saturday</string>
    <string name="common__text_yesterday">Yesterday</string>
    <string name="common__text_date_format">MM/dd/yyyy</string>
    <string name="common__text_date_format__full">MM/dd/yyyy EEEE</string>
    <string name="common__text_unit_hour">h</string>
    <string name="common__text_unit_min">m</string>
    <string name="common__text_unit_hour_full">hour</string>
    <string name="common__text_unit_min_full">min</string>
    <string name="subs_plan__yearly">Yearly</string>
    <string name="subs_plan__monthly">Monthly</string>
    <string name="subs_plan__7days">7 days</string>
    <string name="notification_channel_name__alarm">Alarm</string>
    <string name="notification_channel_name__timer">Timer</string>
    <string name="notification_channel_name__remind">Remind</string>
    <string name="notification_channel_name__sysnotifi">System Notifications</string>
    <string name="notification_remind__bedtime_title">Bedtime Reminder</string>
    <string name="notification_remind__bedtime_msg">It is %d minutes to bedtime. Stop using your smartphone and get ready for bed.</string>
    <string name="notification_remind__missed_alarm_title">There’s an alarm you didn’t hear.</string>
    <string name="notification_remind__missed_alarm_msg">Missed alarm: %02d:%02d</string>
    <string name="notification_remind__no_alarm_is_set_title">No alarm is set.</string>
    <string name="notification_remind__no_alarm_is_set_msg">Tap this notification to set your alarm.</string>
    <string name="notification_remind__save_sd_title">Let\'s log your sleep time</string>
    <string name="notification_remind__save_sd_msg">Did you sleep well? Let\'s record your sleep time and check the quality of your sleep.</string>
    <string name="notification_remind__set_alarm_title">Reminder</string>
    <string name="notification_remind__set_alarm_msg">Alarm is not set. Set the alarm before you go to bed.</string>
    <string name="activity_backup__title">Backup</string>
    <string name="activity_backup__auto_backup">Auto Backup</string>
    <string name="activity_backup__last_backup">Last backup</string>
    <string name="activity_backup__last_backup_failed_date">--/--/---- --- --:--.</string>
    <string name="activity_backup__last_backup_failed_size" translatable="false">---.-- KB</string>
    <string name="activity_backup__description_1">The device will automatically backup when it is idle and connected to the network.</string>
    <string name="activity_backup__description_2">Backups may not be completed if your Google account runs out of storage.</string>
    <string name="activity_backup__manual_backup">Manual Backup</string>
    <string name="activity_backup__make_backup">Make a backup</string>
    <string name="activity_backup__restore">Restore from a backup file</string>
    <string name="activity_backup__m_description_1">Create a backup file on your device, which can be 25 MB or larger.</string>
    <string name="activity_backup__m_description_2">Backups can be made in environments without a network connection, and data can be transferred to beta applications.</string>
    <string name="activity_backup__dialog_restore_title">Restore</string>
    <string name="activity_backup__dialog_restore_newer_msg">This backup file was created with a newer version than the current app. There is a possibility that some data may not be restored correctly, would you like to continue?</string>
    <string name="activity_backup__dialog_restore_confirm_msg">Restoring data from a backup file will overwrite current data. Would you like to restore?</string>
    <string name="activity_backup__toast_successfully_save">Successfully created backup file.</string>
    <string name="activity_backup__toast_failed_save">Failed to create backup file.</string>
    <string name="activity_backup__toast_successfully_restore">Successfully restored the data.</string>
    <string name="activity_backup__toast_failed_restore">Failed to restore the data.</string>
    <string name="activity_backup__toast_file_corrupted">The backup file is corrupted.</string>
    <string name="activity_bed_time__text_enable_bedtime">Enable bedtime reminders.</string>
    <string name="activity_bed_time__text_remind">Remind</string>
    <string name="activity_bed_time__text_remind_format">%d min</string>
    <string name="activity_bed_time__text_time_format">%2d:%02d</string>
    <string name="activity_credits__title">Credits</string>
    <string name="activity_credits__content__timer_sound" translatable="false">Timer sound</string>
    <string name="activity_credits__content__timer_sound_credits" translatable="false">OtoLogic (https://otologic.jp)</string>
    <string name="activity_credits__content__translate" translatable="false">Translated by Google</string>
    <string name="activity_credits__content__translate_credits" translatable="false">(https://translate.google.com)</string>
    <string name="activity_main__bnv_item_alarm">Alarm</string>
    <string name="activity_main__bnv_item_timer">Timer</string>
    <string name="activity_main__bnv_item_stopwatch">Stopwatch</string>
    <string name="activity_main__bnv_item_sleep">Sleep</string>
    <string name="activity_main__bnv_item_etc">Menu</string>
    <string name="activity_premium__title">Premium Features</string>
    <string name="activity_premium__text_subscribe">Subscribe</string>
    <string name="activity_premium__text_purchased">Purchased</string>
    <string name="activity_premium__text_product_id">Product ID</string>
    <string name="activity_premium__text_order_id">Order ID</string>
    <string name="activity_premium__text_time">Time</string>
    <string name="activity_premium__text_time_format">MM/dd/yyyy E HH:mm:ss</string>
    <string name="activity_premium__text_status">Status</string>
    <string name="activity_premium__text_status_ok">OK</string>
    <string name="activity_premium__text_status_not_ack">Not acknowledged</string>
    <string name="activity_premium__text_status_cancelled">Cancelled</string>
    <string name="activity_premium__toast_purchase_completed">Thank you for your purchase.</string>
    <string name="activity_premium__toast_purchase_pending">Your purchase is currently pending, please wait for it to complete.</string>
    <string name="activity_set_alarm__btn_save">Save</string>
    <string name="activity_set_alarm__checkbox_text_sun">S</string>
    <string name="activity_set_alarm__checkbox_text_mon">M</string>
    <string name="activity_set_alarm__checkbox_text_tue">T</string>
    <string name="activity_set_alarm__checkbox_text_wed">W</string>
    <string name="activity_set_alarm__checkbox_text_thu">T</string>
    <string name="activity_set_alarm__checkbox_text_fri">F</string>
    <string name="activity_set_alarm__checkbox_text_sat">S</string>
    <string name="activity_set_alarm__text_alarm">Alarm</string>
    <string name="activity_set_alarm__text_add_a_label">Add a label.</string>
    <string name="activity_set_alarm__text_option_giv">Gradually increase the volume.</string>
    <string name="activity_set_alarm__text_option_mute">Vibration only (Mute)</string>
    <string name="activity_set_alarm__dialog_backkeydown_title" translatable="false">Do you want to return to the alarm list?</string>
    <string name="activity_set_alarm__dialog_backkeydown_msg" translatable="false">Changes not saved. Do you want to return without saving changes?</string>
    <string name="activity_set_alarm__dialog_backkeydown_btn_neg" translatable="false">Cancel</string>
    <string name="activity_set_alarm__dialog_backkeydown_btn_pos" translatable="false">Don\'t save</string>
    <string name="activity_set_alarm__toast_alarm_was_set_for_1day">Alarm set for 1 day %d hours and %d minutes later.</string>
    <string name="activity_set_alarm__toast_alarm_was_set_for_2day_more">Alarm set for %d days %d hours and %d minutes later.</string>
    <string name="activity_set_alarm__toast_alarm_was_set_for_today_h">Alarm set for %d hours and %d minutes later.</string>
    <string name="activity_set_alarm__toast_alarm_was_set_for_today_m">Alarm set for %d minutes later.</string>
    <string name="activity_set_nap__text_min">min</string>
    <string name="activity_set_sleep_duration__title">Add sleep data</string>
    <string name="activity_set_sleep_duration__text_check_nap">This is a nap, not a long sleep.</string>
    <string name="activity_set_sleep_duration__text_how_was_wakeup">How was your wake-up?</string>
    <string name="activity_set_sleep_duration__text_good">Good</string>
    <string name="activity_set_sleep_duration__text_bad">Bad</string>
    <string name="activity_set_sleep_duration__dialog_invalid_time_title">Invalid value</string>
    <string name="activity_set_sleep_duration__dialog_invalid_time_msg">Duration must be between 1 minute and 24 hours</string>
    <string name="activity_set_sleep_duration__dialog_failed_save_title">Error</string>
    <string name="activity_set_sleep_duration__dialog_failed_save_msg">Failed to save sleep data.</string>
    <string name="activity_setting__title">Settings</string>
    <string name="activity_setting__text_alarm_vibrate">Alarm vibrate</string>
    <string name="activity_setting__text_timer_sound">Timer sound</string>
    <string name="activity_setting__text_timer_vibrate">Timer vibrate</string>
    <string name="activity_setting__item_remind">Remind</string>
    <string name="activity_setting__text_remind_savesd">Reminder to record sleep data</string>
    <string name="activity_setting__text_remind_savesd_description">Reminds you to record your sleep when you wake up.</string>
    <string name="activity_setting__item_others">Others</string>
    <string name="activity_setting__text_version">Version</string>
    <string name="fragment_tutorial_2__text_1">Please grant the necessary permissions for Somnificus to work properly.</string>
    <string name="fragment_tutorial_2__btn_allow_notifications">Allow notifications</string>
    <string name="fragment_tutorial_2__btn_allow_overlays">Allow overlays</string>
</resources>