<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryBackgroundColor"
    tools:context=".activity.CreditsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_title_margin_left"
                android:layout_marginTop="@dimen/activity_title_margin"
                android:layout_marginEnd="@dimen/activity_title_margin"
                android:layout_marginBottom="@dimen/activity_title_margin"
                android:text="@string/activity_credits__title"
                android:textSize="@dimen/activity_title_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/primaryHorizontalBar"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/activity_credits__content__timer_sound"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/activity_credits__content__timer_sound_credits"
                android:textSize="16sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/activity_credits__content__translate"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:text="@string/activity_credits__content__translate_credits"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>