<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context=".activity.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_title_margin_left"
                android:layout_marginTop="@dimen/activity_title_margin"
                android:layout_marginEnd="@dimen/activity_title_margin"
                android:layout_marginBottom="@dimen/activity_title_margin"
                android:text="@string/activity_setting__title"
                android:textSize="@dimen/activity_title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_main__bnv_item_alarm"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/SettingActivity__AlarmVibrate_L"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_setting__text_alarm_vibrate"
                    android:textSize="@dimen/text_setting_item_msg" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/SettingActivity__AlarmVibrate_SW" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryHorizontalBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_main__bnv_item_timer"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/SettingActivity__TimerSound_L"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_setting__text_timer_sound"
                    android:textSize="@dimen/text_setting_item_msg" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/SettingActivity__TimerSound_SW" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/SettingActivity__TimerVibrate_L"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_setting__text_timer_vibrate"
                    android:textSize="@dimen/text_setting_item_msg" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/SettingActivity__TimerVibrate_SW" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryHorizontalBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_setting__item_remind"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/SettingActivity__Remind_SaveSD_L"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="4dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_setting__text_remind_savesd"
                        android:textSize="@dimen/text_setting_item_msg" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_setting__text_remind_savesd_description"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="@dimen/text_setting_item_msg_small" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/SettingActivity__Remind_SaveSD_SW" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryHorizontalBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/activity_setting__item_others"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/SettingActivity__Version_L"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:paddingTop="12dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="12dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_setting__text_version"
                    android:textSize="@dimen/text_setting_item_msg" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/SettingActivity__Version_Text"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>